<resources>
    <string name="app_name">CarWiki</string>
    <string name="title_activity_maps">Map</string>
    <string name="besitzer">Halter</string>
    <string name="aufbau">Aufbau</string>
    <string name="preis">Preis</string>
    <string name="model">Model</string>
    <string name="zylinder">Zylinder</string>
    <string name="xCoordinate">xCoordinate</string>
    <string name="yCoordinate">yCoordinate</string>
    <string name="url">Bild-URL</string>
    <string name="hubraum">Hubraum</string>
    <string name="baujahr">Baujahr</string>
    <string name="autohalter">Autohalter</string>
    <string name="vorname">Vorname</string>
    <string name="zurGallery">Zur Gallerie</string>
    <string name="standortAnsehen">Standort anzeigen</string>
    <string name="eintragabändern">Eintrag abändern</string>
    <string name="abändern">Abändern</string>
    <string name="nachname">Nachname</string>
    <string name="information">Information</string>
    <string name="bild">Bild</string>
    <string name="hinzufügen">Hinzufügen</string>
    <string name="neuerBesitzer">Neuer Besitzer</string>
    <string name="neueMarke">Neue Marke</string>
    <string name="markenname">Name der Marke</string>
    <string name="kategorie">Kategorie</string>
    <string name="löschen">Eintrag Löschen</string>
    <string name="sicher">Sind sie sich sicher, dass sie diesen Eintrag entgültig löschen wollen?</string>
    <string name="bestätigen">Bestägen</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="neuesAuto">Neues Auto</string>
    <string name="spracheinstellungen">Sprache (Englisch)</string>
    <string name="spracheWechselnSicher">Sind Sie sicher, dass Sie die Sprache von Deutsch auf Englisch wechseln wollen?</string>
    <string name="aboutInhalt">CarWiki is a simple Wiki for Oldtimers and Cars in General. Made by Danilo Marty and Alexandre Crooij - Copyright 2018</string>
    <string name="about">About</string>
    <string name="ok">Ok</string>
</resources>
